--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
         <h1> great authors</h1>
         <div class="line"></div>
         <br>
-        <iframe width="700" height="700" src="https://en.wikipedia.org/wiki/Rudyard_Kipling"></iframe>
+        <h1> CLICK ME</h1>
+
+        <span> <a href="https://en.wikipedia.org/wiki/Rudyard_Kipling" target="_blank">
+                <img id="picture" src="https://tse3.mm.bing.net/th?id=OIP.EcBN2_tqCH0ojac8y1J5mgHaE1&pid=Api&P=0&w=264&h=173">
+            </a>
+        </span>
     </section>
     <section id="contact">
         <h1> My number</h1>
